<resources>
    <string name="app_name">Ophthalmic_Concepts</string>

    <string name="select_label">Select Patient Therapy</string>
    <string name="cool">COOL</string>
    <string name="warm">WARM</string>
    <string name="cool_warm">COOL &amp; WARM</string>
    <string name="online_support">ONLINE\nSUPPORT</string>
    <string name="reorder_packs">REORDER\nPACKS</string>
    <string name="manual">MANUAL</string>

    <string name="cool_therapy">COOL THERAPY</string>
    <string name="warm_therapy">WARM THERAPY</string>
    <string name="cool_and_warm_therapy">COOL &amp; WARM THERAPY</string>

    <string name="target_temp">TARGET TEMPERATURE</string>
    <string name="actual_temp">ACTUAL TEMPERATURE</string>
    <string name="timer">TIMER</string>

    <string name="massage">MASSAGE</string>
    <string name="intensity">INTENSITY</string>
    <string name="frequency">FREQUENCY</string>
    <string name="time_countdown">TIME COUNTDOWN</string>
    <string name="alarm">ALARM</string>

    <string name="os">OS</string>
    <string name="od">OD</string>
    
    <string name="placeholder_temp">104 ℉</string>
    <string name="placeholder_time">14:00</string>
    <string name="temp">TEMP</string>
    <string name="time">TIME</string>
</resources>
