<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/od_card"
    android:layout_width="300dp"
    android:layout_height="200dp"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="0dp"
    card_view:cardBackgroundColor="@color/borderGray"
    card_view:contentPadding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/coreGray"
        android:padding="@dimen/label_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/od"
            android:textColor="@color/textBlack"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/label_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/temp"
                android:textColor="@color/textBlack"
                android:textStyle="bold"
                android:textSize="@dimen/label_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/placeholder_temp"
                android:textColor="@color/textBlack"
                android:textStyle="bold"
                android:textSize="@dimen/label_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/time"
                android:textColor="@color/textBlack"
                android:textStyle="bold"
                android:textSize="@dimen/label_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/placeholder_time"
                android:textColor="@color/textBlack"
                android:textStyle="bold"
                android:textSize="@dimen/label_text_size"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>