<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/OphthalmicConceptsLogo201_x260_mgd3k_1_crop"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/menu_margins"
        android:text="@string/select_label"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cool"
            card_view:cardBackgroundColor="@color/borderBlue"
            card_view:cardCornerRadius="@dimen/card_corner"
            card_view:cardElevation="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_width="@dimen/button_width"
            android:layout_toLeftOf="@+id/warm">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/label_padding"
                android:background="@color/coreGray"
                android:gravity="center"
                android:text="@string/cool"
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"
                android:textColor="@color/textBlack" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/warm"
            android:layout_marginLeft="@dimen/menu_margins"
            android:layout_marginRight="@dimen/menu_margins"
            card_view:cardBackgroundColor="@color/borderRed"
            card_view:cardCornerRadius="@dimen/card_corner"
            card_view:cardElevation="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_width="@dimen/button_width"
            android:layout_centerHorizontal="true" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/label_padding"
                android:background="@color/coreWarm"
                android:gravity="center"
                android:text="@string/warm"
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"
                android:textColor="@color/textBlack" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/coolwarm"
            card_view:cardBackgroundColor="@color/borderRed"
            card_view:cardCornerRadius="@dimen/card_corner"
            card_view:cardElevation="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_width="@dimen/button_width"
            android:layout_toRightOf="@+id/warm">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/label_padding"
                android:background="@color/coreHot"
                android:gravity="center"
                android:text="@string/cool_warm"
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"
                android:textColor="@color/textBlack" />

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_margins">

        <android.support.v7.widget.CardView
            android:id="@+id/online"
            card_view:cardBackgroundColor="@color/borderGray"
            card_view:cardCornerRadius="@dimen/card_corner"
            card_view:cardElevation="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_width="@dimen/button_width"
            android:layout_toLeftOf="@+id/reorder" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/label_padding"
                android:background="@color/coreGray"
                android:gravity="center"
                android:text="@string/online_support"
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"
                android:textColor="@color/textBlack" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/reorder"
            card_view:cardBackgroundColor="@color/borderGray"
            card_view:cardCornerRadius="@dimen/card_corner"
            card_view:cardElevation="0dp"
            android:layout_marginLeft="@dimen/menu_margins"
            android:layout_marginRight="@dimen/menu_margins"
            android:layout_height="@dimen/button_height"
            android:layout_width="@dimen/button_width"
            android:layout_centerHorizontal="true" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/label_padding"
                android:background="@color/coreGray"
                android:gravity="center"
                android:text="@string/reorder_packs"
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"
                android:textColor="@color/textBlack" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/manual"
            card_view:cardBackgroundColor="@color/borderGray"
            card_view:cardCornerRadius="@dimen/card_corner"
            card_view:cardElevation="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_width="@dimen/button_width"
            android:layout_toRightOf="@+id/reorder" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/label_padding"
                android:background="@color/coreGray"
                android:gravity="center"
                android:text="@string/manual"
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"
                android:textColor="@color/textBlack" />

        </android.support.v7.widget.CardView>

    </RelativeLayout>



</LinearLayout>
