<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/temp_time_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/OphthalmicConceptsLogo201_x260_mgd3k_1_crop"/>

    <TextView
        android:id="@+id/therapy_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/menu_margins"
        android:text="@string/cool_and_warm_therapy"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/target"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/actual">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/label_text_size"
                android:text="@string/target_temp"/>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                card_view:cardElevation="0dp"
                card_view:cardCornerRadius="@dimen/card_corner"
                card_view:cardBackgroundColor="@color/borderOrange">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/placeholder_temp"
                    android:textSize="@dimen/label_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/textBlack"
                    android:gravity="center"
                    android:background="@color/coreWarm"
                    android:layout_margin="@dimen/label_padding"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/menu_margins"
                android:layout_gravity="center"
                card_view:cardElevation="0dp"
                card_view:cardCornerRadius="@dimen/card_corner"
                card_view:cardBackgroundColor="@color/borderGray">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="BACK"
                    android:textSize="@dimen/label_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/textBlack"
                    android:gravity="center"
                    android:background="@color/coreGray"
                    android:layout_margin="@dimen/label_padding"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/actual"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/menu_margins"
            android:layout_marginRight="@dimen/menu_margins">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/label_text_size"
                android:text="@string/actual_temp"/>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                card_view:cardElevation="0dp"
                card_view:cardCornerRadius="@dimen/card_corner"
                card_view:cardBackgroundColor="@color/borderRed">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/placeholder_temp"
                    android:textSize="@dimen/label_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/textBlack"
                    android:gravity="center"
                    android:background="@color/coreHot"
                    android:layout_margin="@dimen/label_padding"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/menu_margins"
                android:layout_gravity="center"
                card_view:cardElevation="0dp"
                card_view:cardCornerRadius="@dimen/card_corner"
                card_view:cardBackgroundColor="@color/borderGray">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/reorder_packs"
                    android:textSize="@dimen/label_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/textBlack"
                    android:gravity="center"
                    android:background="@color/coreGray"
                    android:layout_margin="@dimen/label_padding"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/timer"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/actual">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/label_text_size"
                android:text="@string/timer"/>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                card_view:cardElevation="0dp"
                card_view:cardCornerRadius="@dimen/card_corner"
                card_view:cardBackgroundColor="@color/borderGray">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/placeholder_time"
                    android:textSize="@dimen/label_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/textBlack"
                    android:gravity="center"
                    android:background="@color/coreGray"
                    android:layout_margin="@dimen/label_padding"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/menu_margins"
                android:layout_gravity="center"
                card_view:cardElevation="0dp"
                card_view:cardCornerRadius="@dimen/card_corner"
                card_view:cardBackgroundColor="@color/borderGray">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/manual"
                    android:textSize="@dimen/label_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/textBlack"
                    android:gravity="center"
                    android:background="@color/coreGray"
                    android:layout_margin="@dimen/label_padding"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </RelativeLayout>



</LinearLayout>
